docs: update i18n ui strings

--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -201,7 +201,8 @@ You can provide translations for additional languages you support — or overrid
    	"page.lastUpdated": "Last updated:",
    	"page.previousLink": "Next",
    	"page.nextLink": "Previous",
-   	"404.text": "Page not found. Check the URL or try using the search bar."
+   	"404.text": "Page not found. Check the URL or try using the search bar.",
+   	"fileTree.directory": "Directory"
    }
    ```
 
