fix: update broken link
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/hi/guides/project-structure.mdx
+++ b/docs/src/content/docs/hi/guides/project-structure.mdx
@@ -12,7 +12,7 @@ Starlight परियोजनाएं आम तौर पर अन्य As
 - `astro.config.mjs` — Astro कॉन्फ़िगरेशन फ़ाइल; इसमें Starlight एकीकरण और कॉन्फ़िगरेशन शामिल है।
 - `src/content/config.ts` — सामग्री संग्रह कॉन्फ़िगरेशन फ़ाइल; आपके परियोजना में Starlight का फ्रंटमैटर योजना जोड़ता है।
 - `src/content/docs/` — कंटेंट फ़ाइलें. Starlight इस निर्देशिका में प्रत्येक `.md`, `.mdx` या `.mdoc` फ़ाइल को आपकी साइट पर एक पेज में बदल देता है।
-- `src/content/i18n/` (वैकल्पिक) — अंतर्राष्ट्रीयकरण](/hi/guides/i18n/) का समर्थन करने के लिए अनुवाद जानकारी।
+- `src/content/i18n/` (वैकल्पिक) — [अंतर्राष्ट्रीयकरण](/hi/guides/i18n/) का समर्थन करने के लिए अनुवाद जानकारी।
 - `src/` — आपकी परियोजना के लिए अन्य स्रोत कोड और फ़ाइलें (अवयव, शैलियाँ, छवियाँ, आदि)।
 - `public/` — स्थिर संपत्तियाँ (फॉण्ट, फ़ेविकॉन, PDFs, आदि) जिन्हें Astro द्वारा संसाधित नहीं किया जाएगा।
 
